# Code-Example

fw_asic/: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md
fw_asic/cmake/: CMSIS.cmake  cmocka.cmake
fw_asic/inc/: asic_adc.h  asic_common.h  asic_gpio.h  asic_pwm.h  asic_regs.h  asic_spi.h
fw_asic/src/: asic_adc.c  asic_gpio.c  asic_pwm.c  asic_spi.c
fw_asic/test/: CMakeLists.txt  test_asic_spi.c
